--- a/starwars_blog/templates/index.html
+++ b/starwars_blog/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1 class="main-heading">Welcome to the Star Wars Disscussion Blog</h1>
+    <h1 class="main-heading">Lets Talk About Star Wars!</h1>
     {% for post in posts %}
         <div class="card">
             <div class="car-content">
