--- a/starwars_blog/templates/login.html
+++ b/starwars_blog/templates/login.html
@@ -3,8 +3,8 @@
     <h2 class="signin-header">Sign In</h2>
     <form method="POST" action="{{ url_for('login') }}">
         <div class="input-field">
-            <input type="text" id="username" name="username" required>
-            <label for="username">Username or Email</label>
+            <input type="text" id="login" name="login" required>
+            <label for="login">Username or Email</label>
         </div>
         <div class="input-field">
             <input type="password" id="password" name="password" required>
