tested register.html and the starwars_blog postgres database hold username, email and password hash

--- a/starwars_blog/templates/base.html
+++ b/starwars_blog/templates/base.html
@@ -24,7 +24,7 @@
                     <li><a href="{{ url_for('logout') }}">Logout</a></li>
                 {% else %}
                     <li><a href="{{ url_for('login') }}">Login</a></li>
-                    <li><a href="">Register</a></li>
+                    <li><a href="{{ url_for('register') }}">Register</a></li>
                     <li><a href="">Discussions</a></li>
                 {% endif %}
             </ul>
@@ -36,7 +36,7 @@
             <li><a href="{{ url_for('logout') }}">Logout</a></li>
         {% else %}
             <li><a href="{{ url_for('login') }}">Login</a></li>
-            <li><a href="">Register</a></li>
+            <li><a href="{{ url_for('register') }}">Register</a></li>
             <li><a href="">Discussions</a></li>
         {% endif %}
     </ul>
