--- a/starwars_blog/templates/index.html
+++ b/starwars_blog/templates/index.html
@@ -1,6 +1,11 @@
 {% extends "base.html" %}
 {% block content %}
     <h1 class="main-heading">Lets Talk About Star Wars!</h1>
+
+    {% if current_user.is_authenticated %}
+    <a href="{{ url_for('new_post') }}" class="btn create-post-btn">Create New Post</a>
+  {% endif %}
+
     {% for post in posts %}
         <div class="card">
             <div class="car-content">
@@ -9,7 +14,7 @@
                 <p>Posted by {{ post.user.username }} on {{ post.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
             </div>
             <div class="card-action">
-                <a href="{{ url_for("post", post_id=post.id) }}">Read More</a>
+                <a href="{{ url_for('post', post_id=post.id) }}">Read More</a>
             </div>
         </div>
     {% endfor %}
