--- a/starwars_blog/templates/post.html
+++ b/starwars_blog/templates/post.html
@@ -2,9 +2,22 @@
 {% block content %}
     <h2 class="post-heading">{{ post.title}}</h2>
     <p>{{ post.body }}</p>
-    <p>Posted by {{ post.user,username }} on {{ post.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
 
-    {% if current_user.is_authenticated and current_user,id == post.user.id %}
+    {% if post.film_name %}
+        <p><strong>Film Name:</strong> {{ post.film_name }}</p>
+    {% endif %}
+    {% if post.film_num %}
+        <p><strong>Film Number:</strong> {{ post.film_num }}</p>
+    {% endif %}
+    {% if post.year_of_release %}
+        <p><strong>Year of Release:</strong> {{ post.year_of_release }}</p>
+    {% endif %}
+    {% if post.favourite_character %}
+        <p><strong>Favourite Character:</strong> {{ post.favourite_character }}</p>
+    {% endif %}
+    <p>Posted by {{ post.user.username }} on {{ post.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
+
+    {% if current_user.is_authenticated and current_user.id == post.user.id %}
         <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btm edit-post-btn">Edit Post</a>
     {% endif %}
 
