--- a/starwars_blog/templates/create_post.html
+++ b/starwars_blog/templates/create_post.html
@@ -10,6 +10,26 @@
             <textarea class="materialize-textarea" id="body" name="body" required></textarea>
             <label for="body">Post Text</body> 
         </div>
+
+        <!-- Optional fields -->
+        <div class="input-field">
+            <input type="text" id="film-name" name="film-name" minlength="5" maxlength="100" type="text">
+            <label for="film-name">Film Name (Optional)</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="film-num" name="film-num" minlength="1" maxlength="10" type="text">
+            <label for="film-num">Film Number (Optional)</label>
+        </div>
+        <div class="input-field">
+            <input type="text" class="datepicker" id="year-of-release" name="year-of-release" minlength="4" maxlength="50" type="text">
+            <label for="year-of-release">Year of Release (Optional)</label>
+        </div>
+        <div class="input-field">
+            <input type="text" id="favourite-character" name="favourite-character"minlength="2" maxlength="100" type="text">
+            <label for="favourite-character">Favourite Character (Optional)</label>
+        </div>
+
         <button type="submit" class="btn post-submit">Submit Post</button>
+
     </form>
 {% endblock %}
