--- a/starwars_blog/templates/post.html
+++ b/starwars_blog/templates/post.html
@@ -18,7 +18,10 @@
     <p>Posted by {{ post.user.username }} on {{ post.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
 
     {% if current_user.is_authenticated and current_user.id == post.user.id %}
+        <!-- Edit post button -->
         <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btm edit-post-btn">Edit Post</a>
+        <!-- Delete post button -->
+        <button class="btn red" data-target="deletePostModal{{ post.id }}" onclick="openModal('deletePostModal{{ post.id }}')">Delete Post</button>
     {% endif %}
 
     <hr>
@@ -29,6 +32,12 @@
             <div class="card-content">
                 <p class="comment-body">{{ comment.body }}</p>
                 <p class="comment-details">Commented by {{ comment.user.username }} on {{ comment.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
+
+                {% if current_user.id == comment.user_id %}
+                    <!-- Delete Comment Button -->
+                    <button class="btn red" data-target="deleteCommentModal{{ comment.id }}" onclick="openModal('deleteCommentModal{{ comment.id }}')">Delete Comment</button>
+                {% endif %}
+
             </div>
         </div>
     {% endfor %}
