--- a/starwars_blog/templates/index.html
+++ b/starwars_blog/templates/index.html
@@ -12,7 +12,29 @@
                 <span class="card-title">{{ post.title }}</span>
                 <p>{{ post.body }}</p>
                 <p>Posted by {{ post.user.username }} on {{ post.timestamp.strftime("%d-%m-%Y %H:%M") }}</p>
+
+                {% if current_user.is_authenticated and current_user.id == post.user.id %}
+                    <!-- Edit post button -->
+                    <a href="{{ url_for('edit_post', post_id=post.id) }}" class="btn edit-post-btn">Edit Post</a>
+                    <!-- Delete post button -->
+                    <button class="btn red post-del-btn" data-target="deletePostModal{{ post.id }}" onclick="openModal('deletePostModal{{ post.id }}')">Delete Post</button>
+
+                    <!-- Delete post modal -->
+                    <div id="deletePostModal{{ post.id }}" class="modal">
+                        <div class="modal-content">
+                            <h4>Delete Post</h4>
+                            <p>Are you sure you want to delete this post?</p>
+                        </div>
+                        <div class="modal-footer">
+                            <form method="POST" action="{{ url_for('delete_post', post_id=post.id) }}">
+                                <button type="submit" class="btn red">Delete</button>
+                                <button type="button" class="modal-close btn">Cancel</button>
+                            </form>
+                        </div>
+                    </div>
+                {% endif %}
             </div>
+
             <div class="card-action">
                 <a href="{{ url_for('post', post_id=post.id) }}">Read More</a>
             </div>
