fix code within routes.py, create/edit/post.html to show all optional properties withing the posts. this has been tested and is now working as should

--- a/starwars_blog/templates/create_post.html
+++ b/starwars_blog/templates/create_post.html
@@ -13,20 +13,20 @@
 
         <!-- Optional fields -->
         <div class="input-field">
-            <input type="text" id="film-name" name="film-name" minlength="5" maxlength="100" type="text">
-            <label for="film-name">Film Name (Optional)</label>
+            <input type="text" id="film_name" name="film_name" minlength="5" maxlength="100" type="text">
+            <label for="film_name">Film Name (Optional)</label>
         </div>
         <div class="input-field">
-            <input type="text" id="film-num" name="film-num" minlength="1" maxlength="10" type="text">
-            <label for="film-num">Film Number (Optional)</label>
+            <input type="number" id="film_num" name="film_num" minlength="1" maxlength="10" type="text">
+            <label for="film_num">Film Number (Optional)</label>
         </div>
         <div class="input-field">
-            <input type="text" class="datepicker" id="year-of-release" name="year-of-release" minlength="4" maxlength="50" type="text">
-            <label for="year-of-release">Year of Release (Optional)</label>
+            <input type="number" id="year_of_release" name="year_of_release">
+            <label for="year_of_release">Year of Release</label>
         </div>
         <div class="input-field">
-            <input type="text" id="favourite-character" name="favourite-character"minlength="2" maxlength="100" type="text">
-            <label for="favourite-character">Favourite Character (Optional)</label>
+            <input type="text" id="favourite_character" name="favourite_character"minlength="2" maxlength="100" type="text">
+            <label for="favourite_character">Favourite Character (Optional)</label>
         </div>
 
         <button type="submit" class="btn post-submit">Submit Post</button>
