--- a/starwars_blog/templates/login.html
+++ b/starwars_blog/templates/login.html
@@ -12,7 +12,7 @@
         </div>
         <div class="input-field">
             <label>
-                <input type="checkbox" id="remember-me" name="remember-me">
+                <input type="checkbox" id="remember-me" name="remember_me">
                 <span class="right" id="remember-me-text">Remember Me</span>
             </label>
         </div>
