--- a/starwars_blog/templates/login.html
+++ b/starwars_blog/templates/login.html
@@ -3,12 +3,12 @@
     <h2 class="signin-header">Sign In</h2>
     <form method="POST" action="{{ url_for('login') }}">
         <div class="input-field">
-            <input type="text" id="login" name="login" required>
             <label for="login">Username or Email</label>
+            <input type="text" id="login" name="login" placeholder="Input Username or Email" required>
         </div>
         <div class="input-field">
-            <input type="password" id="password" name="password" required>
             <label for="password">Password</label>
+            <input type="password" id="password" name="password" placeholder="Input Password" required>
         </div>
         <div class="input-field">
             <label>
