--- a/starwars_blog/static/css/style.css
+++ b/starwars_blog/static/css/style.css
@@ -23,25 +23,51 @@ nav {
     box-shadow: 0 4px 2px -2px #444;
 }
 
+
+.nav-links {
+    font-family: 'Orbitron', sans-serif;
+    font-weight: 600;
+    color: #007bce;
+}
+
+.nav-links:hover {
+    color: #feda4a;
+}
+
 .nav-wrapper .brand-logo {
     font-family: 'Star Wars', sans-serif;
     color: #ff0000;
     font-size: 1.8rem;
     margin-bottom: 20px;
     padding-left: 40px;
+    padding-top: 5px;
 }
 
 .brand-logo:hover {
     color: #fff;
 }
 
-.nav-wrapper ul li a {
-    font-family: 'Orbitron', sans-serif;
-    color: #feda4a;
-}
 
 .sidenav-trigger i {
     color: #feda4a;
+}
+
+.sidenav {
+    background-color: #444;
+}
+
+.sidenav li>a {
+    text-align: center;
+    color: #007bce;
+    display: block;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    height: 48px;
+    line-height: 48px;
+    margin: 5% 25%;
+    padding: 10px;
+    text-transform: uppercase;
 }
 
 /* Button Styles */
@@ -54,6 +80,16 @@ nav {
     letter-spacing: 1px;
     border-radius: 5px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+}
+
+.signin-btn {
+    background-color: #feda4a; 
+    color: #000; 
+}
+
+.signin-btn:hover {
+    background-color: #239400; 
+    color: #fff; 
 }
 
 .create-post-btn {
@@ -104,7 +140,7 @@ nav {
 .card-title {
     font-family: 'Star Wars', sans-serif;
     font-size: 1.5rem;
-    color: #ffe81f;
+    color: #007bce;
 }
 
 .card-content p, .card-content span {
@@ -139,9 +175,18 @@ nav {
     color: #ffe81f;
 }
 
-.remember-me {
-    right: 10px;
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating) {
+    color: #62009b;
+    margin-right: 24px;
+    transition: color .3s ease;
+    text-transform: uppercase;
+}
 
+.card .card-action a:not(.btn):not(.btn-large):not(.btn-small):not(.btn-large):not(.btn-floating):hover {
+    color: #fff;
+    margin-right: 24px;
+    transition: color .3s ease;
+    text-transform: uppercase;
 }
 
 /* Header Styles */
@@ -150,7 +195,7 @@ nav {
     font-size: 2.5rem;
     text-align: center;
     margin-top: 40px;
-    color: #007bce;
+    color: #feda4a;
 }
 
 .post-heading {
@@ -221,4 +266,9 @@ hr {
     margin-top: 20px;
     background-color: #ffe81f;
     color: #000;
+}
+
+.remember-me {
+    right: 10px;
+
 }
