--- a/starwars_blog/templates/edit_post.html
+++ b/starwars_blog/templates/edit_post.html
@@ -27,6 +27,6 @@
             <input type="text" id="favourite_character" name="favourite_character" value="{{ post.favourite_character }}">
             <label for="favourite_character" class="favourite_character">Favourite Character</label>
         </div>
-        <button type="submit" class="btn">Update Post</button>
+        <button type="submit" class="btn update-btn">Update Post</button>
     </form>
 {% endblock %}
