--- a/starwars_blog/templates/register.html
+++ b/starwars_blog/templates/register.html
@@ -14,6 +14,6 @@
             <input type="password" id="password" name="password" required>
             <label for="password">Password</label>
         </div>
-        <button type="submit" class="btn register-btn">Sign In</button>
+        <button type="submit" class="btn register-btn">Register Me</button>
     </form>
 {% endblock %}
