--- a/starwars_blog/templates/index.html
+++ b/starwars_blog/templates/index.html
@@ -48,7 +48,7 @@
             </div>
 
             <div class="card-action">
-                <a class="readmore-btn" href="{{ url_for('post', post_id=post.id) }}">Read More</a>
+                <a class="readmore-btn" href="{{ url_for('post', post_id=post.id) }}">See full post</a>
             </div>
         </div>
     {% endfor %}
