--- a/starwars_blog/static/css/style.css
+++ b/starwars_blog/static/css/style.css
@@ -14,9 +14,12 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Star Wars', sans-serif;
     letter-spacing: 2px;
+    margin-top: 80px;
 }
 
-
+h2 {
+    font-size: 2.2rem;
+}
 /* Navbar Styles */
 nav {
     background-color: #111; 
@@ -37,7 +40,7 @@ nav {
 .nav-wrapper .brand-logo {
     font-family: 'Star Wars', sans-serif;
     color: #ff0000;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     margin-bottom: 20px;
     padding-left: 40px;
     padding-top: 5px;
@@ -212,7 +215,7 @@ nav {
 
 .post-heading {
     font-family: 'Star Wars', sans-serif;
-    font-size: 2.5rem;
+    font-size: 2.2rem;
     text-align: center;
     margin-top: 40px;
     color: #007bce;
