add changes to README formatt and add flash for login

--- a/starwars_blog/templates/create_post.html
+++ b/starwars_blog/templates/create_post.html
@@ -17,7 +17,7 @@
             <label for="film_name">Film Name (Optional)</label>
         </div>
         <div class="input-field">
-            <input type="number" id="film_num" name="film_num" minlength="1" maxlength="10" type="text">
+            <input type="number" id="film_num" name="film_num" minlength="1" maxlength="10" >
             <label for="film_num">Film Number (Optional)</label>
         </div>
         <div class="input-field">
