--- a/starwars_blog/templates/edit_post.html
+++ b/starwars_blog/templates/edit_post.html
@@ -8,7 +8,7 @@
             <input type="text" id="title" name="title" value="{{ post.title }}" required>
         </div>
         <div class="input-field">
-            <label for="body">Body</label>
+            <label for="body">Post Text</label>
             <textarea class="materialize-textarea" id="body" name="body" required>{{ post.body }}</textarea>
         </div>
         <div class="input-field">
